--- a/public/js/app/customers/views/index.html
+++ b/public/js/app/customers/views/index.html
@@ -1,12 +1,12 @@
 <!-- Content Header (Page header) -->
         <section class="content-header">
           <h1>
-            Personas
+            Clientes
             <small>Panel de Control</small>
           </h1>
           <ol class="breadcrumb">
             <li><a href="/"><i class="fa fa-dashboard"></i> Home</a></li>
-            <li class="active">Personas</li>
+            <li class="active">Clientes</li>
           </ol>
 
           
@@ -18,7 +18,7 @@
         <section class="content">
         <div class="row">
         <div class="col-md-12">
-          <a href="/persons/create" type="submit" class="btn btn-primary pull-left">Agregar Personas</a> 
+          <a href="/customers/create" type="submit" class="btn btn-primary pull-left">Añadir Cliente</a>
           </div>
         </div>
         </br>
@@ -29,9 +29,9 @@
               <div class="box">
 
                 <div class="box-header with-border">
-                  <h3 class="box-title">Personas</h3>
+                  <h3 class="box-title">Clientes</h3>
                   <div class="box-tools">
-                  <form ng-keyup="searchPerson()">
+                  <form ng-keyup="searchCustomer()">
                     <div class="input-group" style="width: 200px;">
                       <input type="text" ng-model="query"  name="table_search" class="form-control input-sm pull-right" placeholder="Search" />
                       <div class="input-group-btn">
@@ -42,36 +42,38 @@
                   </div>
                 </div><!-- /.box-header -->
                 <div class="box-body">
-                    <div class="row">
-                        <div class="col-sm-10">
-                            <div ng-show="success" class="callout callout-info">
-                                <strong>{{success}} se ha creado correctamente!</strong>
-                            </div>
-                        </div>
+                    <div class="callout callout-info"  ng-show="success">
+                        <strong>Ha agregado correctamente a {{success}}.</strong>
                     </div>
-                <div class="callout callout-info"  ng-show="person.id > 0">
-                    <h4>¿ Estás seguro que deseas eliminar a "{{person.nombres}}" ?</h4>
+                <div class="callout callout-info"  ng-show="customer.id > 0">
+                    <h4>¿ Estás seguro que deseas eliminar a "{{customer.nombres}}" ?</h4>
                     <p>
-                      <button type="button" class="btn btn-danger" ng-click="destroyPerson()">Si</button>
-                      <button type="button" class="btn btn-default" ng-click="cancelPerson()">No</button>
+                      <button type="button" class="btn btn-danger" ng-click="destroyCustomer()">Si</button>
+                      <button type="button" class="btn btn-default" ng-click="cancelCustomer()">No</button>
                     </p>
                   </div>
                   <table class="table table-bordered">
                     <tr>
                       <th style="width: 10px">#</th>
-                      <th>Nombres</th>
-                      <th>Apellidos</th>
+                      <th>Nombre de Contacto</th>
+                      <th>Empresa</th>
+                      <th>Código</th>
+                      <th>Email</th>
+                      <th>S/. Compras</th>
                       <th style="width: 40px">Editar</th>
                       <th style="width: 40px">Eliminar</th>
                     </tr>
                     
-                    <tr ng-repeat="row in persons">
+                    <tr ng-repeat="row in customers">
                       <td>{{$index + 1}}</td>
 
-                      <td>{{row.nombres}}</td>
-                      <td>{{row.apPaterno}}</td>
-                      <td><a ng-click="editPerson(row)" class="btn btn-warning btn-xs">Editar</a></td>
-                      <td><a ng-click="deletePerson(row)" class="btn btn-danger btn-xs">Eliminar</a></td>
+                      <td>{{row.nombres+ " " + row.apellidos }}</td>
+                      <td>{{row.empresa}}</td>
+                      <td>{{row.codigo}}</td>
+                      <td>{{row.email}}</td>
+                      <td>-</td>
+                      <td><a ng-click="editCustomer(row)" class="btn btn-warning btn-xs">Editar</a></td>
+                      <td><a ng-click="deleteCustomer(row)" class="btn btn-danger btn-xs">Eliminar</a></td>
                       
                     </tr>
                     
