--- a/public/js/app/brands/views/index.html
+++ b/public/js/app/brands/views/index.html
@@ -1,12 +1,11 @@
 <!-- Content Header (Page header) -->
         <section class="content-header">
-          <h1>
-            Stores
+          <h1>Brands
             <small>Panel de Control</small>
           </h1>
           <ol class="breadcrumb">
             <li><a href="/"><i class="fa fa-dashboard"></i> Home</a></li>
-            <li class="active">Stores</li>
+            <li class="active">Brands</li>
           </ol>
 
           
@@ -18,7 +17,7 @@
         <section class="content">
         <div class="row">
         <div class="col-md-12">
-          <a href="/stores/create" type="submit" class="btn btn-primary pull-left">Add Stores</a> 
+          <a href="/brands/create" type="submit" class="btn btn-primary pull-left">Add Brands</a> 
           </div>
         </div>
         </br>
@@ -29,9 +28,9 @@
               <div class="box">
 
                 <div class="box-header with-border">
-                  <h3 class="box-title">Stores</h3>
+                  <h3 class="box-title">Brands</h3>
                   <div class="box-tools">
-                  <form ng-keyup="searchStore()">
+                  <form ng-keyup="searchBrand()">
                     <div class="input-group" style="width: 200px;">
                       <input type="text" ng-model="query"  name="table_search" class="form-control input-sm pull-right" placeholder="Search" />
                       <div class="input-group-btn">
@@ -49,42 +48,31 @@
                             </div>
                         </div>
                     </div>
-                  <div class="callout callout-info"  ng-show="store.id >0">
-                    <h4>¿ Estás seguro que deseas eliminar a "{{store.nombreTienda}}" ?</h4>
+                <div class="callout callout-info"  ng-show="brand.id">
+                    <h4>¿ Estás seguro que deseas eliminar a "{{Brand.nombre}}" ?</h4>
                     <p>
-                      <button type="button" class="btn btn-danger" ng-click="destroyStore()">Si</button>
-                      <button type="button" class="btn btn-default" ng-click="cancelStore()">No</button>
+                      <button type="button" class="btn btn-danger" ng-click="destroyBrand()">Si</button>
+                      <button type="button" class="btn btn-default" ng-click="cancelBrand()">No</button>
                     </p>
                   </div>
                   <table class="table table-bordered">
                     <tr>
                       <th style="width: 10px">#</th>
-                      <th>Nombre Tienda</th>
-                      <th>Razon Social</th>
-                      <th>Ruc</th>
-                      <th>Direccion</th>
-                      <th>Distrito</th>
-                      <th>Provincia</th>
-                      <th>Departamento</th>
-                      <th>Email</th>
-                      <th>Website</th>
+                      <th>Nombre</th>
+                      <th>ShortName</th>
+                      <th>Descripcion</th>
+                      
                       <th style="width: 40px">Editar</th>
                       <th style="width: 40px">Eliminar</th>
                     </tr>
                     
-                    <tr ng-repeat="row in stores">
+                    <tr ng-repeat="row in brands">
                       <td>{{$index + 1}}</td>
-                      <td>{{row.nombreTienda}}</td>
-                      <td>{{row.razonSocial}}</td>
-                      <td>{{row.ruc}}</td>
-                      <td>{{row.direccion}}</td>
-                      <td>{{row.distrito}}</td>
-                      <td>{{row.provincia}}</td>
-                      <td>{{row.departamento}}</td>
-                      <td>{{row.email}}</td>
-                      <td>{{row.website}}</td>
-                      <td><a ng-click="editStore(row)" class="btn btn-warning btn-xs">Editar</a></td>
-                      <td><a ng-click="deleteStore(row)" class="btn btn-danger btn-xs">Eliminar</a></td>
+                      <td>{{row.nombre}}</td>
+                      <td>{{row.shortname}}</td>
+                      <td>{{row.descripcion}}</td>
+                      <td><a ng-click="editBrand(row)" class="btn btn-warning btn-xs">Editar</a></td>
+                      <td><a ng-click="deleteBrand(row)" class="btn btn-danger btn-xs">Eliminar</a></td>
                       
                     </tr>
                     
