--- a/public/js/app/employeecosts/views/index.html
+++ b/public/js/app/employeecosts/views/index.html
@@ -1,12 +1,12 @@
 <!-- Content Header (Page header) -->
         <section class="content-header">
           <h1>
-            Proveedores
+            Costos Fijos
             <small>Panel de Control</small>
           </h1>
           <ol class="breadcrumb">
             <li><a href="/"><i class="fa fa-dashboard"></i> Home</a></li>
-            <li class="active">Proveedores</li>
+            <li class="active">Costos Fijos</li>
           </ol>
 
           
@@ -18,7 +18,7 @@
         <section class="content">
         <div class="row">
         <div class="col-md-12">
-          <a href="/suppliers/create" type="submit" class="btn btn-primary pull-left">Añadir Proveedor</a>
+          <a href="/employeecosts/create" type="submit" class="btn btn-primary pull-left">Add Atribut</a> 
           </div>
         </div>
         </br>
@@ -29,9 +29,9 @@
               <div class="box">
 
                 <div class="box-header with-border">
-                  <h3 class="box-title">Suppliers</h3>
+                  <h3 class="box-title">Stores</h3>
                   <div class="box-tools">
-                  <form ng-keyup="searchSupplier()">
+                  <form ng-keyup="searchEmployeecost()">
                     <div class="input-group" style="width: 200px;">
                       <input type="text" ng-model="query"  name="table_search" class="form-control input-sm pull-right" placeholder="Search" />
                       <div class="input-group-btn">
@@ -42,38 +42,46 @@
                   </div>
                 </div><!-- /.box-header -->
                 <div class="box-body">
-                    <div class="callout callout-info"  ng-show="success">
-                        <strong>Ha agregado correctamente a {{success}}.</strong>
+                    <div class="row">
+                        <div class="col-sm-10">
+                            <div ng-show="success" class="callout callout-info">
+                                <strong>{{success}} se ha creado correctamente!</strong>
+                            </div>
+                        </div>
                     </div>
-                <div class="callout callout-info"  ng-show="supplier.id > 0">
-                    <h4>¿ Estás seguro que deseas eliminar a "{{supplier.nombres}}" ?</h4>
+                  <div class="callout callout-info"  ng-show="employeecost.id > 0">
+                    <h4>¿ Estás seguro que deseas eliminar a "{{employeecost.nombre}}" ?</h4>
                     <p>
-                      <button type="button" class="btn btn-danger" ng-click="destroySupplier()">Si</button>
-                      <button type="button" class="btn btn-default" ng-click="cancelSupplier()">No</button>
+                      <button type="button" class="btn btn-danger" ng-click="destroyEmployeecost()">Si</button>
+                      <button type="button" class="btn btn-default" ng-click="cancelEmployeecost()">No</button>
                     </p>
                   </div>
                   <table class="table table-bordered">
                     <tr>
                       <th style="width: 10px">#</th>
-                      <th>Nombre Completo </th>
-                      <th>Empresa</th>
-                      <th>Codigo</th>
-                      <th>Ruc</th>
-                      <th>Telefono</th>
+                      <th>Costo Fijo </th>
+                      <th>Comisiones</th>
+                      <th>Seguro</th>
+                      <th>Menu</th>
+                      <th>Pasajes</th>
+                      <th>Total</th>
+                      <th>Empleado</th>
+                    
                       <th style="width: 40px">Editar</th>
                       <th style="width: 40px">Eliminar</th>
                     </tr>
-                   
-                    <tr ng-repeat="row in suppliers">
-                      <td>{{$index + 1 + (currentPage-1)*itemsperPage}}</td>
-
-                      <td>{{row.nombres+ " " + row.apellidos }}</td>
-                      <td>{{row.empresa}}</td>
-                      <td>{{row.codigo}}</td>
-                      <td>{{row.ruc}}</td>
-                      <td>{{row.movl}}</td>
-                      <td><a ng-click="editSupplier(row)" class="btn btn-warning btn-xs">Editar</a></td>
-                      <td><a ng-click="deleteSupplier(row)" class="btn btn-danger btn-xs">Eliminar</a></td>
+                    
+                    <tr ng-repeat="row in employeecosts">
+                      <td>{{$index + 1}}</td>
+                      <td>{{row.CostoFijo}}</td>
+                      <td>{{row.comisiones}}</td>
+                      <td>{{row.seguro}}</td>
+                      <td>{{row.menu}}</td>
+                      <td>{{row.pasajes}}</td>
+                      <td>{{row.total}}</td>
+                      <td>{{row.employee_id}}</td>
+                      <td><a ng-click="editEmployeecost(row)" class="btn btn-warning btn-xs">Editar</a></td>
+                      <td><a ng-click="deleteEmployeecost(row)" class="btn btn-danger btn-xs">Eliminar</a></td>
                       
                     </tr>
                     
