--- a/public/js/app/employees/views/index.html
+++ b/public/js/app/employees/views/index.html
@@ -8,10 +8,7 @@
             <li><a href="/"><i class="fa fa-dashboard"></i> Home</a></li>
             <li class="active">Empleados</li>
           </ol>
-
-          
-        </section>
-
+          </section>
         
 
         <!-- Main content -->
@@ -29,7 +26,7 @@
               <div class="box">
 
                 <div class="box-header with-border">
-                  <h3 class="box-title">Clientes</h3>
+                  <h3 class="box-title">Empleados</h3>
                   <div class="box-tools">
                   <form ng-keyup="searchEmployee()">
                     <div class="input-group" style="width: 200px;">
@@ -41,10 +38,14 @@
                     </form>
                   </div>
                 </div><!-- /.box-header -->
+                  <div class="callout callout-warning"  ng-show="estado">
+                      <h4><b>Gastos Del Empleado {{mostrarShow}}</b></h4>
+                      <button type="button" ng-click="" data-toggle="modal" data-target="#miventana1" class="btn btn-primary" ng-show="mostrarver" >Ver</button>
+                          <button type="button" ng-click="" data-toggle="modal" data-target="#miventana" class="btn btn-primary" ng-show="mostraragregar">Agregar</button>                          
+                          <button type="button" class="btn btn-default" ng-click="variable2()">Salir</button>
+                  </div>
                 <div class="box-body">
-                    <div class="callout callout-info"  ng-show="success">
-                        <strong>Ha agregado correctamente a {{success}}.</strong>
-                    </div>
+                   
                 <div class="callout callout-info"  ng-show="employee.id > 0">
                     <h4>¿ Estás seguro que deseas eliminar a "{{employee.nombres}}" ?</h4>
                     <p>
@@ -60,6 +61,7 @@
                       <th>E-mail</th>
                       <th>Direcion</th>
                       <th>Estado</th>
+                      <th style="width: 40px">Costos</th>
                       <th style="width: 40px">Editar</th>
                       <th style="width: 40px">Eliminar</th>
                     </tr>
@@ -72,7 +74,11 @@
                       <td>{{row.email}}</td>
                       <td>{{row.estado}}</td>
                       <td>-</td>
-                      <td><a ng-click="editEmployee(row)" class="btn btn-warning btn-xs">Editar</a></td>
+
+                      <!--<td><a ng-click="showForm" class="btn btn-warning btn-xs">Costos Fijos</a></td>
+                      <td><a ng-click="variable(row)" data-toggle="modal" data-target="#miventana" class="btn btn-info btn-xs">Costos Fijos</a></td>-->
+                        <td><a ng-click="editCostos(row)" class="btn btn-success btn-xs">Ver Costos</a></td>
+                        <td><a ng-click="editEmployee(row)" class="btn btn-warning btn-xs">Editar</a></td>
                       <td><a ng-click="deleteEmployee(row)" class="btn btn-danger btn-xs">Eliminar</a></td>
                       
                     </tr>
@@ -81,7 +87,7 @@
                   </table>
                 </div><!-- /.box-body -->
                 <div class="box-footer clearfix">
-                  <pagination total-items="totalItems" ng-model="currentPage" max-size="maxSize" class="pagination-sm no-margin pull-right" items-per-page="itemsperPage" boundary-links="true" rotate="false" num-pages="numPages" ng-change="pageChanged()"></pagination>
+                  <pagination total-items="totalItems" ng-model="currentPage" max-size="maxSize" class="pagination-sm no-margin pull-right" items-per-page="itemsperPage" boundary-links="ngenabled" rotate="false" num-pages="numPages" ng-change="pageChanged()"></pagination>
 
 
 
@@ -90,3 +96,137 @@
             </div>  
           </div>
         </section>
+          <!-- =======================================================================================================Ventana Emergente Crear=================================-->
+        <div class="container"  style="margin-top: 60px;">
+           <div  class="modal fade" id="miventana" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="ngenabled">
+             <div  class="modal-dialog">
+               <div style="border-radius: 5px" class="modal-content">
+                 <div class="modal-header" style="background: #1E1617 ;border-radius: 5px" >
+                   <button type="button" style="background: #FF0000" class="close" data-dismiss="modal" aria-hidden="ngenabled"> &times; </button>
+                   <h4><b>Gastos Del Empleado {{mostrarShow}}</b></h4>
+                   </div>
+                   <div class="modal-body">
+          <div class="row">
+          <div class="col-md-6">
+                      <form name="employeecostCreateForm" role="form" novalidate>
+                       <div class=" callout-info" >
+                      <div  class="form-group" >
+                      <label for="descripcion">Sueldo Fijo</label>
+                      <input  type="text" class="form-control" name="descripcion" placeholder="Sueldo Fijo" ng-model="employeecost.SueldoFijo">
+                     </div>
+                     
+                     <div  class="form-group" >
+                      <label for="descripcion">Comisiones</label>
+                      <input type="text" class="form-control" name="descripcion" placeholder="Comisiones"
+                      ng-model="employeecost.comisiones" >
+                     </div>
+                     <div class="form-group" >
+                      <label for="descripcion">Seguro</label>
+                      <input type="text" class="form-control" name="descripcion" placeholder="Seguro"
+                      ng-model="employeecost.seguro">
+                     </div>
+          </div> 
+        </div>
+          <div class="col-md-6">
+                     <div class="form-group" >
+                      <label for="descripcion">Menu</label>
+                      <input type="text" class="form-control" name="descripcion" placeholder="Menu"
+                      ng-model="employeecost.menu" >
+                     </div>
+                      <div class="form-group" >
+                      <label for="descripcion">Pasajes</label>
+                      <input type="text" class="form-control" name="descripcion" placeholder="Psajes"
+                      ng-model="employeecost.pasajes" >
+                     </div>
+                     <div class="form-group" >
+                      <label for="descripcion">Total</label>
+                      <input type="text" class="form-control" name="descripcion" placeholder="Total"
+                      ng-model="employeecost.total">
+                     </div>
+              </div>
+                     <div ng-show="false" class="form-group" >
+                      <label for="descripcion">Empleado</label>
+                      <input type="text" class="form-control"  name="descripcion" placeholder="Empleado"
+                      ng-model="employeecost.employee_id">
+                     </div>
+                     </div>
+                     </div>
+                     <div class="modal-footer" style="background: #1E1617 ;">
+                     <button type="submit" class="btn btn-primary" ng-click="createEmployeecost()" data-dismiss="modal">Crear</button>
+                    <a  class="btn btn-danger" data-dismiss="modal" aria-hidden="ngenabled">Cancelar</a>
+                   </div>
+                     </form>
+                   
+                   
+               </div>
+             </div>
+           </div>
+        </div>
+        </div>
+        <!-- ========================================================================================================Ventana Emergente Listado=================================-->
+         <div class="container"  style="margin-top: 60px;">
+           <div  class="modal fade" id="miventana1" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="ngenabled">
+             <div  class="modal-dialog">
+                       <div style="border-radius: 5px" class="modal-content">
+                        <div class="modal-header" style="background: #1E1617 ;border-radius: 5px" >
+                         <button type="button" style="background: #FF0000" class="close" data-dismiss="modal" aria-hidden="ngenabled"> &times; </button>
+                        <h4><b>Lista De Gastos del Empleado {{mostrarShow}}</b></h4>
+                        </div>
+                   <div class="modal-body">
+          <div class="row">
+          <div class="col-md-6">
+                       <div class=" callout-info" >
+                       <div class="form-group" >
+                      <label for="descripcion">Sueldo Fijo</label>
+                      <input ng-disabled="ngenabled" type="text" class="form-control" name="descripcion" placeholder="Sueldo Fijo" ng-model="employeecost.SueldoFijo">
+                     </div>
+                     <div class="form-group" >
+                      <label for="descripcion">Comisiones</label>
+                      <input ng-disabled="ngenabled" type="text" class="form-control" name="descripcion" placeholder="Comisiones"
+                      ng-model="employeecost.comisiones" >
+                     </div>
+              
+                     <div class="form-group" >
+                      <label for="descripcion">Seguro</label>
+                      <input ng-disabled="ngenabled" type="text" class="form-control" name="descripcion" placeholder="Seguro"
+                      ng-model="employeecost.seguro">
+                     </div>
+        </div> 
+        </div>
+          <div class="col-md-6">
+                     <div class="form-group" >
+                      <label for="descripcion">Menu</label>
+                      <input ng-disabled="ngenabled" type="text" class="form-control" name="descripcion" placeholder="Menu"
+                      ng-model="employeecost.menu" >
+                     </div>
+                      <div class="form-group" >
+                      <label for="descripcion">Pasajes</label>
+                      <input ng-disabled="ngenabled" type="text" class="form-control" name="descripcion" placeholder="Psajes"
+                      ng-model="employeecost.pasajes" >
+                     </div>
+                     <div class="form-group" >
+                      <label for="descripcion">Total</label>
+                      <input ng-disabled="ngenabled" type="text" class="form-control" name="descripcion" placeholder="Total"
+                      ng-model="employeecost.total">
+                     </div>
+          </div>
+
+                     <div ng-show="false" class="form-group" >
+                      <label for="descripcion">Empleado</label>
+                      <input ng-disabled="ngenabled" type="text" class="form-control"  name="descripcion" placeholder="Empleado"
+                      ng-model="employeecost.employee_id">
+                     </div>
+                   </div>
+                      <div class="modal-footer" style="background: #1E1617 ;">
+                    <button type="submit" class="btn btn-primary" ng-click="activarDesac()">Modificar</button>
+                     <button type="submit" class="btn btn-info" ng-click="updateEmployeecost()" data-dismiss="modal">Guardar Cambios</button>
+                     <button type="submit" class="btn btn-success" ng-click="destroyEmployeecost()" data-dismiss="modal">Eliminar</button>
+                    <a  class="btn btn-danger" data-dismiss="modal" aria-hidden="ngenabled">Salir</a>
+                   </div>
+                   
+                   
+               </div>
+             </div>
+           </div>
+        </div>
+        
