--- a/public/js/app/products/views/index.html
+++ b/public/js/app/products/views/index.html
@@ -69,14 +69,19 @@
                       <td>{{$index + 1}}</td>
 
                       <td>{{row.proCodigo }}</td>
-                      <td><a ng-href="/product/show/{{row.proId}}">{{row.proNombre}}</a></td>
+                      <td><a ng-href="/products/show/{{row.proId}}">{{row.proNombre}}</a></td>
                         <td>{{row.varPrice}}</td>
                       <td>{{row.braNombre}}</td>
                       <td>{{row.typNombre}}</td>
                         <td>{{row.proCreado}}</td>
                         <td>
-                            <span ng-if="row.proQuantvar == '0'">-</span>
-                            <a ng-if="row.proQuantvar != '0'" class="btn btn-info btn-xs" data-toggle="modal" data-target="#myModal" ng-click="showVariants(row)">{{row.proQuantvar}}</a>
+                            <span ng-if="row.proHasVar == '1'">
+                                        <span ng-if="row.proQuantvar == '0'">0</span>
+                                        <a ng-if="row.proQuantvar != '0'" class="btn btn-info btn-xs" data-toggle="modal" data-target="#myModal" ng-click="showVariants(row)">{{row.proQuantvar}}</a>
+                                </span>
+                            <span ng-if="row.proHasVar == '0'">
+                                        <span ng-if="row.proQuantvar == '0'">-</span>
+                                </span>
                         </td>
                         <td>##</td>
                       <td><a ng-click="editProduct(row)" class="btn btn-warning btn-xs">Editar</a></td>
@@ -126,7 +131,7 @@
                             </tr>
                             <tr ng-repeat="row in variants">
                                 <td>{{$index + 1}}</td>
-                                <td><a ng-href="/variant/show/{{row.id}}">{{row.sku}}
+                                <td><a ng-href="/variant/show/{{row.id}}">{{row.product.nombre}}
                                     <span ng-repeat="row2 in row.det_atr ">
                                         / {{row2.descripcion}}
                                     </span>
