--- a/public/js/app/purchases/views/index.html
+++ b/public/js/app/purchases/views/index.html
@@ -17,7 +17,7 @@
         <section class="content">
         <div class="row">
         <div class="col-md-12">
-          <a href="/purchases/create" type="submit" class="btn btn-primary pull-left">Add Purchases</a> 
+          <a href="/purchases/create" type="submit"  class="btn btn-primary pull-left">Add Purchases</a> 
           </div>
         </div>
         </br>
@@ -70,6 +70,7 @@
                     
                     <tr ng-repeat="row in purchases">
                       <td>{{$index + 1}}</td>
+                      <td ng-hide="true">{{row.id}}</td>
                       <td>{{row.fechaPedido}}</td>
                       <td>{{row.fechaPrevista}}</td>
                       <td>{{row.fechaEntrega}}</td>
@@ -77,7 +78,7 @@
                       <td>{{row.montoBruto}}</td>
                       <td>{{row.montoTotal}}</td>
                       <td><a ng-click="editPurchase(row)" class="btn btn-warning btn-xs">Editar</a></td>
-                      <td><a ng-click="deletePurchase(row)" class="btn btn-danger btn-xs">Eliminar</a></td>
+                      <td><a ng-click="TreerDetalleCompra(row)" class="btn btn-danger btn-xs">Eliminar</a></td>
                       
                     </tr>
                     
