--- a/public/js/app/types/views/index.html
+++ b/public/js/app/types/views/index.html
@@ -1,12 +1,12 @@
       <!-- Content Header (Page header) -->
         <section class="content-header">
           <h1>
-            Tipos
+            Líneas
             <small>Panel de Control</small>
           </h1>
           <ol class="breadcrumb">
             <li><a href="/"><i class="fa fa-dashboard"></i> Home</a></li>
-            <li class="active">Tipos</li>
+            <li class="active">Líneas</li>
           </ol>
 
           
@@ -16,7 +16,7 @@
         <section class="content">
         <div class="row">
         <div class="col-md-12">
-          <a href="/types/create" type="submit" class="btn btn-primary pull-left">Add types</a> 
+          <a href="/types/create" type="submit" class="btn btn-primary pull-left">Add Line</a>
           </div>
         </div>
         </br>
@@ -27,7 +27,7 @@
               <div class="box">
 
                 <div class="box-header with-border">
-                  <h3 class="box-title">types</h3>
+                  <h3 class="box-title">Líneas</h3>
                   <div class="box-tools">
                   <form ng-keyup="searchBrand()">
                     <div class="input-group" style="width: 200px;">
