Validaciones Sales(add cliente,vendedor)

--- a/public/js/app/sales/views/index.html
+++ b/public/js/app/sales/views/index.html
@@ -18,7 +18,7 @@
         <section class="content">
         <div class="row">
         <div class="col-md-12">
-          <a href="/orders/create" type="submit" class="btn btn-primary pull-left">Realizar Compra</a> 
+          <a href="/sales/create" type="submit" class="btn btn-primary pull-left">Realizar Compra</a> 
           </div>
         </div>
         </br>
