corregido edit variant

--- a/public/js/app/products/views/index.html
+++ b/public/js/app/products/views/index.html
@@ -43,8 +43,8 @@
                     <div class="callout callout-info"  ng-show="success">
                         <strong>Ha agregado correctamente a {{success}}.</strong>
                     </div>
-                <div class="callout callout-info"  ng-show="product.id > 0">
-                    <h4>¿ Estás seguro que deseas eliminar a "{{product.nombres}}" ?</h4>
+                <div class="callout callout-info"  ng-show="product.proId > 0">
+                    <h4>¿ Estás seguro que deseas eliminar a "{{product.proNombre}}" ?</h4>
                     <p>
                       <button type="button" class="btn btn-danger" ng-click="destroyProduct()">Si</button>
                       <button type="button" class="btn btn-default" ng-click="cancelProduct()">No</button>
