--- a/public/js/app/purchases/views/index.html
+++ b/public/js/app/purchases/views/index.html
@@ -116,7 +116,8 @@
                       <td>{{row.fechaEntrega.substring(0,10)}}</td>
                       <td>{{row.empresa}}</td>
                       <td>{{row.almacen}}</td>
-                      <td><a target="_self" ng-href="/orderPurchases/edit/{{row.orderPurchase_id}}">Ver Orden</a></td>
+                      <td ng-if="row.orderPurchase_id>0"><a target="_self" ng-href="/orderPurchases/edit/{{row.orderPurchase_id}}">Ver Orden</a></td>
+                      <td ng-if="row.orderPurchase_id==null">Sin Orden</td>
                       <td>{{row.descuento}}</td>
                       <td>{{row.montoBruto}}</td>
                       <td>{{row.montoTotal}}</td>
