he subido para bajar cambios

--- a/public/js/app/employees/views/index.html
+++ b/public/js/app/employees/views/index.html
@@ -15,7 +15,7 @@
         <section class="content">
         <div class="row">
         <div class="col-md-12">
-        <a href="/employees/create" type="submit" ng-click="llenarcombo()" class="btn btn-primary pull-left">Añadir Cliente</a>
+        <a href="/employees/create" type="submit" ng-click="llenarcombo()" class="btn btn-primary pull-left">Añadir Empleado</a>
          <!-- <input type="submit" class="btn btn-primary pull-left" value="Anadir Cl" ng-click="llenarcombo()" onclick="location='/employees/create'"/>-->
           </div>
         </div>
