--- a/public/js/app/employees/views/index.html
+++ b/public/js/app/employees/views/index.html
@@ -109,8 +109,8 @@
            <div  class="modal fade" id="miventana" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="ngenabled">
              <div  class="modal-dialog">
                <div style="border-radius: 5px" class="modal-content">
-                 <div class="modal-header" style="background: #1E1617 ;border-radius: 5px" >
-                   <button type="button" style="background: #FF0000" class="close" data-dismiss="modal" aria-hidden="ngenabled"> &times; </button>
+                 <div class="modal-header" style="" >
+                   <button type="button" style="" class="close" data-dismiss="modal" aria-hidden="ngenabled"> &times; </button>
                    <h4><b>Gastos Del Empleado {{mostrarShow}}</b></h4>
                    </div>
                    <div class="modal-body">
@@ -159,7 +159,7 @@
                      </div>
                      </div>
                      </div>
-                     <div class="modal-footer" style="background: #1E1617 ;">
+                     <div class="modal-footer" style="">
                      <button type="submit" class="btn btn-primary" ng-click="createEmployeecost()" data-dismiss="modal">Crear</button>
                     <a  class="btn btn-danger" data-dismiss="modal" aria-hidden="ngenabled">Cancelar</a>
                    </div>
@@ -176,8 +176,8 @@
            <div  class="modal fade" id="miventana1" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="ngenabled">
              <div  class="modal-dialog">
                        <div style="border-radius: 5px" class="modal-content">
-                        <div class="modal-header" style="background: #1E1617 ;border-radius: 5px" >
-                         <button type="button" style="background: #FF0000" class="close" data-dismiss="modal" aria-hidden="ngenabled"> &times; </button>
+                        <div class="modal-header" style="" >
+                         <button type="button" style="" class="close" data-dismiss="modal" aria-hidden="ngenabled"> &times; </button>
                         <h4><b>Lista De Gastos del Empleado {{mostrarShow}}</b></h4>
                         </div>
                    <div class="modal-body">
@@ -225,7 +225,7 @@
                       ng-model="employeecost.employee_id">
                      </div>
                    </div>
-                      <div class="modal-footer" style="background: #1E1617 ;">
+                      <div class="modal-footer" style="">
                     <button type="submit" class="btn btn-primary" ng-click="activarDesac()">Modificar</button>
                      <button type="submit" class="btn btn-info" ng-click="updateEmployeecost()" data-dismiss="modal">Guardar Cambios</button>
                      <button type="submit" class="btn btn-success" ng-click="destroyEmployeecost()" data-dismiss="modal">Eliminar</button>
